@@ -50,7 +50,7 @@ $language_data = array (
     // Bash DOES have single line comments with # markers. But bash also has
     // the  $# variable, so comments need special handling (see sf.net
     // 1564839)
-	'COMMENT_SINGLE' => array(),
+	'COMMENT_SINGLE' => array('#'),
 	'COMMENT_MULTI' => array(),
 	'CASE_KEYWORDS' => GESHI_CAPS_NO_CHANGE,
 	'QUOTEMARKS' => array("'", '"'),
@@ -88,7 +88,7 @@ $language_data = array (
 			'last', 'lastb', 'ld', 'ld86', 'ldd', 'less', 'lex', 'link', 'ln', 'loadkeys',
 			'loadunimap', 'locate', 'lockfile', 'login', 'logname',
 			'lp', 'lpr', 'ls', 'lsattr', 'lsmod', 'lsmod.old', 'lynx',
-			'm4', 'make', 'man', 'mapscrn', 'mesg', 'mkdir', 'mkfifo', 
+			'm4', 'make', 'man', 'mapscrn', 'mesg', 'mkdir', 'mkfifo',
 			'mknod', 'mktemp', 'more', 'mount', 'msgfmt', 'mv',
 			'namei', 'nano', 'nasm', 'nawk', 'netstat', 'nice',
 			'nisdomainname', 'nl', 'nm', 'nm86', 'nmap', 'nohup', 'nop',
@@ -144,7 +144,7 @@ $language_data = array (
 			3 => 'color: #7a0874; font-weight: bold;'
 			),
 		'COMMENTS' => array(
-			1 => 'color: #808080; font-style: italic;'
+			0 => 'color: #808080; font-style: italic;'
 			),
 		'ESCAPE_CHAR' => array(
 			0 => 'color: #000099; font-weight: bold;'
@@ -167,7 +167,7 @@ $language_data = array (
 			0 => 'color: #007800;',
 			1 => 'color: #007800;',
 			2 => 'color: #007800;',
-			3 => 'color: #808080; font-style: italic;',
+//			3 => 'color: #808080; font-style: italic;',
 			4 => 'color: #007800;'
 			),
 		'SCRIPT' => array(
@@ -185,7 +185,7 @@ $language_data = array (
 		0 => "\\$\\{[a-zA-Z_][a-zA-Z0-9_]*?\\}",
 		1 => "\\$[a-zA-Z_][a-zA-Z0-9_]*",
 		2 => "([a-zA-Z_][a-zA-Z0-9_]*)=",
-		3 => "(?<!\\$)#[^\n]*",
+//		3 => "(?<!\\$)#[^\n]*",
 		4 => "\\$#"
 		),
 	'STRICT_MODE_APPLIES' => GESHI_NEVER,
